fix layout issues on upload form

--- a/src/stylesheets/abstracts/_helpers.scss
+++ b/src/stylesheets/abstracts/_helpers.scss
@@ -14,7 +14,7 @@
 %upload-material-text-fields {
   font-size: 16px;
   font-family: 'Coves-Light';
-  padding: 10px 10px 10px 5px;
+  padding: 0 10px 10px 5px;
   display: block;
   border: none;
   border-bottom: 1px solid #e8e8e8;
